# SamaraUniversity

1_sem/: lesson.cpp  task_matrix.cpp
2_sem/1_lab/: CMakeLists.txt
2_sem/1_lab/include/figures/: figures.h
2_sem/1_lab/src/: figures.cc
2_sem/1_lab/tests/: figures_tests.cc
2_sem/2_lab/: .gitignore  CMakeLists.txt
2_sem/2_lab/include/figures/: figures.h
2_sem/2_lab/src/: console.cc  figures.cc
2_sem/2_lab/tests/: figures_tests.cc
2_sem/3_lab/include/figures/: figures.h
2_sem/3_lab/src/: console.cc  figures.cc
2_sem/3_lab/tests/: figures_tests.cc
3_sem/pp_tasks_py/: 1-text.txt  1.py  2-text.txt  3-text.txt  3.py
4_sem/binary_tree/: CMakeLists.txt
4_sem/binary_tree/include/tree/: tree.h
4_sem/binary_tree/src/: tree.cc
4_sem/binary_tree/statistics/: stat.csv  statistics.cc
4_sem/binary_tree/tests/: tree_tests.cc
4_sem/graph/include/: graph.cc
4_sem/graph/task/: task.cc
4_sem/graph/tests/: graph_tests.cc
4_sem/hash_table/: CMakeLists.txt
4_sem/hash_table/include/: hash_table.cc
4_sem/hash_table/tests/: hash_table_tests.cc
4_sem/task_advent_of_code_day1/: day1.py
